gom request response va constant lai